k8s/cicd/argocd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neo-argocd
  labels:
    name: neo-argocd
    istio-injection: enabled

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd-vs
  namespace: neo-argocd
spec:
  hosts:
  - argocd.neo-service-layer.com
  gateways:
  - neo-infrastructure/neo-service-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: neo-argocd-server
        port:
          number: 80
    timeout: 30s
